# cargo-crab

./: .gitignore  Cargo.toml
assets/rplace_data_sample/: different_forms_of_coordinates.csv
src/: image_io.rs  main.rs
src/pixel_art_scanner/: color_utils.rs  config.rs  mod.rs  pixel_art.rs
src/rplace_data_parser/: config.rs  mod.rs  parser.rs  parser_image.rs  record.rs
