[package]
name = "pixel-crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
rayon = "1.8.1"
anyhow = "1.0.79"
csv = "1.3.0"
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
